Added comments to all the files explaining what they do.